--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@svgr/webpack": "^8.1.0",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
