--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@svgr/webpack": "^8.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.453.0",
     "next": "14.2.14",
+    "next-auth": "^5.0.0-beta.23",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4",
