--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"],
-      "@/app/*":["./app/*"],
+      "@/*":["./app/*"],
       "@public/*":["./public/*"]
     }
   },
