--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@octokit/core": "^6.1.2",
     "@svgr/webpack": "^8.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "graphql": "^16.9.0",
+    "lucide-react": "^0.453.0",
     "next": "14.2.14",
+    "next-auth": "^5.0.0-beta.23",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4",
