--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"],
-      "@/app/*":["./app/*"],
+      "@/*":["./app/*"],
       "@public/*":["./public/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/(internal)/dashboard/page.tsx"],
   "exclude": ["node_modules"]
 }
