--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "date-fns": "^4.1.0",
     "graphql": "^16.9.0",
     "lucide-react": "^0.453.0",
-    "next": "14.2.14",
+    "next": "^15.0.0-canary.202",
     "next-auth": "^5.0.0-beta.23",
     "react": "^18",
     "react-dom": "^18",
